--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
    <h3> Zagred Cosmetics, Perfumes and Bracelets Store is the right place to be. </h3>
   </section>
   </div>
-
+6gigiykiukiu
   <!-- Shop Section -->
   <section class="shop">
     <h2>SHOP US</h2>
