--- a/index.html
+++ b/index.html
@@ -34,17 +34,17 @@
             </div>
             <div class="feature-grid">
                 <div class="feature-item">
-                    <img src="file:///C:/Users/USER/Downloads/93ab0c16-b88e-4bfa-9c5b-625c59408cb0.jpg" alt="Fear Alfina">
+                    <img src="house 1 .jpg" alt="Fear Alfina">
                     <h3>Fear Alfina</h3>
                     <p>Fortified Security</p>
                 </div>
                 <div class="feature-item">
-                    <img src="file:///C:/Users/USER/Downloads/fbb649f3-3f95-4a52-ae11-88f01ade9a62.jpg" alt="Fear Mions">
+                    <img src="house 2.jpg" alt="Fear Mions">
                     <h3>Fear Mions</h3>
                     <p>Enhanced Performance</p>
                 </div>
                 <div class="feature-item">
-                    <img src="file:///C:/Users/USER/Downloads/ecf9194f-24c2-414c-844e-86026a70e045.jpg" alt="Fren Moram">
+                    <img src="house 3.jpg" alt="Fren Moram">
                     <h3>Fren Moram</h3>
                     <p>Flexible Solutions</p>
                 </div>
