--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <div class="logo">🍃 Zagred</div>
         <nav class="nav">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="contac.html">Contact</a></li>
                 <li><a href="#">Others</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
                 <h1>Purchase A House Today</h1>
                 <h2>Freeful Businesses</h2>
                 <p>Reliable solutions for people having issues with looking for a well furnished and beautiful house .</p>
-                <a href="index.html"><button class="cta-button">Buy Now !!!</button></a>
+                <a href="contac.html"><button class="cta-button">Buy Now !!!</button></a>
             </div>
         </section>
 
@@ -58,7 +58,7 @@
             <div class="shoot-usin-grid">
                 <div class="shoot-usin-item">
                   
-                    <h3>Property Development</h3>
+                    <h3> Development</h3>
                     <p>Commercial Properties</p>
                     <p>Estates</p>
                 </div>
@@ -80,25 +80,28 @@
         <section class="pet-previews">
             <div class="pet-previews-header">
                 <h2>Client Previews</h2>
-                <p>Performance and technology for modern businesses.</p>
+                <p>Performance and trusted housing solutions for modern living.</p>
             </div>
             <div class="pet-previews-grid">
                 <div class="pet-preview-item">
-                    <h3>Baues</h3>
-                    <p>Contributions</p>
-                    <p>Reliable Systems</p>
+                    <h3>Property Sales</h3>
+                    <p>Affordable Homes</p>
+                    <p>Verified Lands</p>
                 </div>
                 <div class="pet-preview-item">
-                    <h3>Boitt</h3>
-                    <p>Flexibility</p>
+                    <h3>Rentals & Leasing</h3>
+                    <p>Flexible Payments</p>
+                    <p>Comfortable Apartrments</p>
                 </div>
                 <div class="pet-preview-item">
-                    <h3>Denoir</h3>
-                    <p>Direct Support</p>
+                    <h3>Management</h3>
+                    <p>24/7 Maintenance</p>
+                    <p>Reliable Facilty Services</p>
                 </div>
                 <div class="pet-preview-item">
-                    <h3>Consicos</h3>
-                    <p>Scalable Solutions</p>
+                    <h3>Estate Cousulancy</h3>
+                    <p>Investment guidance</p>
+                    <p>Secure Documentation</p>
                 </div>
             </div>
         </section>
