--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     <p>Enhanced Durability</p>
                 </div>
                 <div class="feature-item">
-                    <img src="house3.jpg" alt="Fren Moram">
+                    <img src="" alt="Fren Moram">
                     <h3>German Home</h3>
                     <p>Flexible Payments</p>
                 </div>
