--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="contac.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
                 <li><a href="#">Others</a></li>
             </ul>
         </nav>
@@ -24,7 +24,7 @@
                 <h1>Purchase A House Today</h1>
                 <h2>Freeful Businesses</h2>
                 <p>Reliable solutions for people having issues with looking for a well furnished and beautiful house .</p>
-                <a href="contac.html"><button class="cta-button">Buy Now !!!</button></a>
+                <a href="#"><button class="cta-button">Buy Now !!!</button></a>
             </div>
         </section>
 
@@ -44,7 +44,7 @@
                     <p>Enhanced Durability</p>
                 </div>
                 <div class="feature-item">
-                    <img src="" alt="Fren Moram">
+                    <img src="house3.jpg" alt="Fren Moram">
                     <h3>German Home</h3>
                     <p>Flexible Payments</p>
                 </div>
