--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h1>Purchase A House Today</h1>
                 <h2>Freeful Businesses</h2>
                 <p>Reliable solutions for people having issues with looking for a well furnished and beautiful house .</p>
-                <a href="#"><button class="cta-button">Buy Now !!!</button></a>
+                <a href="contac.html"><button class="cta-button">Buy Now !!!</button></a>
             </div>
         </section>
 
